--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: CI - Build Docker Image
+name: CI - Build and Push Docker Image
 
 # 1. Define when this workflow should run
 on:
@@ -7,37 +7,48 @@ on:
       - main # Run whenever code is pushed to the 'main' branch
 
 jobs:
-  # 2. Define the main build job
-  build:
+  # 2. Define the main build and push job
+  build-and-push:
     runs-on: ubuntu-latest # Use a fresh Linux virtual machine provided by GitHub
+    env:
+      IMAGE_NAME: devops-starter-projects # Define a clean image name
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4 # Get the latest code from the repository
 
-      # 3. Use the Docker official action to build the image
-      # Note: We are only building locally for CI, not pushing to Docker Hub yet.
-      - name: Build Docker Image
+      # 3. Log in to the GitHub Container Registry (GHCR)
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }} # GITHUB_TOKEN is automatically created
+
+      # 4. Build and Push the Docker image to GHCR
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: . # Look for the Dockerfile in the current directory
-          push: false # Do not push to a registry (only build for testing)
-          tags: ${{ github.repository_owner }}/devops-starter-projects:latest, ${{ github.repository_owner }}/devops-starter-projects:${{ github.sha }}
+          context: .
+          push: true # Push the image after building
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           
-      # 4. A better smoke test: Run the container and check if it's serving content
+      # 5. A better smoke test: Run the container and check if it's serving content
       - name: Run Smoke Test
         run: |
           echo "Running container from the built image..."
-          docker run --name my-test-app -d -p 8080:80 ${{ github.repository_owner }}/devops-starter-projects:latest
+          # Note: We use the local tag for the smoke test
+          docker run --name my-test-app -d -p 8080:80 ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
           echo "Waiting for container to start..."
           sleep 5
           echo "Testing web server response..."
-          # Use curl with -f to fail the step on HTTP error codes (like 404 or 500)
           curl -f http://localhost:8080
 
-      # 5. Conceptual output for successful completion
-      - name: CI Success Message
+      # 6. Conceptual output for successful completion
+      - name: CI/CD Success Message
         run: |
           echo "==================================================="
-          echo "CI Pipeline Successful! Image built on GitHub."
-          echo "The image tag would be based on the commit: ${{ github.sha }}"
+          echo "CI/CD Pipeline Successful! Image pushed to GHCR."
+          echo "Image URL: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
           echo "==================================================="
