Add permissions to build-and-push workflow job
Explicitly sets 'contents: read' and 'packages: write' permissions for the build-and-push job in the GitHub Actions workflow to improve security and enable image publishing to GitHub Packages.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,10 @@ jobs:
   # 2. Define the main build and push job
   build-and-push:
     runs-on: ubuntu-latest # Use a fresh Linux virtual machine provided by GitHub
+    permissions:
+      contents: read # To checkout the code
+      packages: write # To push images to GitHub Packages
+
     env:
       IMAGE_NAME: devops-starter-projects # Define a clean image name
     steps:
