--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@ services:
       # Map port 8081 on your computer to port 80 in the container.
       # We use 8081 to avoid conflicting with Jenkins on 8080.
       - "8081:80"
+      # Changed to 8080 as requested.
+      - "8080:80"
